[package]
name = "wio-evip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.2"
wio_terminal = "0.3"
panic-halt = "0.2"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
nb = "0.1"
accelerometer = "0.12.0"
heapless = "0.5.6"
